Designed controllers snd service  to access DTO